--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "newman": "^6.2.1"
   }
 }
