--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   },
   "homepage": "https://github.com/jabiralawfaa/Praktikum-interoperabilitas-FlyEnv#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "newman": "^6.2.1"
+    "newman": "^6.2.0"
   }
 }
